# skin_segmentor

./: .gitignore  README.md  pyproject.toml
demo/: app.py  app_with_comparisons.py
examples/: inference_with_Mask2Former.py  run_instance_segmentation_inference.py  run_instance_segmentation_train.py  run_semantic_segmentation_inference.py  run_semantic_segmentation_no_trainer.py
src/annotation_utils/: annotation_gui.py
src/dataset_utils/: create_skin_dataset.py  create_skin_id2label.py
src/evaluation_utils/: evaluate.py
src/skin_segmentor/: __init__.py  inference_segformer_ss.py  train_segformer_ss.py  train_segformer_ss.sh
src/utils/: create_skin_dataset.py  generate_mask.py  rename_mela.bash
