[project]
name = "skin-segmentor"
version = "0.1.0"
description = "skin segmentor for  acne, hemoglobin and melanin, implemented based on SegFormer"
readme = "README.md"
authors = [
    { name = "Wooyeol Lee", email = "wooyeol0519@snu.ac.kr" }
]
requires-python = ">=3.11, <3.12"
dependencies = [
    "accelerate>=1.6.0",
    "albumentations==1.3.1",
    "datasets>=3.5.0",
    "evaluate>=0.4.3",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "pillow>=11.2.1",
    "pycocotools>=2.0.8",
    "scipy>=1.15.2",
    "torch==2.6.0",
    "torchmetrics>=1.7.1",
    "torchvision==0.21.0",
    "transformers>=4.51.2",
    "wandb>=0.19.10",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
demo = [
    "gradio>=5.26.0",
]
